[gd_scene load_steps=36 format=3 uid="uid://dbhogmumb8dq5"]

[ext_resource type="Texture2D" uid="uid://dkwpxvrecdat4" path="res://boss_mobs/Soap/soap.png" id="1_ox8so"]
[ext_resource type="Script" path="res://boss_mobs/Soap/Boss_Soap_Script.gd" id="2_02gbn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2wiga"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mgon"]
atlas = ExtResource("1_ox8so")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_474xg"]
atlas = ExtResource("1_ox8so")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6px2t"]
atlas = ExtResource("1_ox8so")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5o1q"]
atlas = ExtResource("1_ox8so")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5myn7"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p73g7"]
atlas = ExtResource("1_ox8so")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ece5m"]
atlas = ExtResource("1_ox8so")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ndb1"]
atlas = ExtResource("1_ox8so")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt6jp"]
atlas = ExtResource("1_ox8so")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q3pf"]
atlas = ExtResource("1_ox8so")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_he6qd"]
atlas = ExtResource("1_ox8so")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btaq7"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_isly0"]
atlas = ExtResource("1_ox8so")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f3gf"]
atlas = ExtResource("1_ox8so")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mdx2"]
atlas = ExtResource("1_ox8so")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kkd1"]
atlas = ExtResource("1_ox8so")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60kb4"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aniuf"]
atlas = ExtResource("1_ox8so")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8tt5"]
atlas = ExtResource("1_ox8so")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eov42"]
atlas = ExtResource("1_ox8so")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi0kc"]
atlas = ExtResource("1_ox8so")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7im6n"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1jx7"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyqc2"]
atlas = ExtResource("1_ox8so")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_euek2"]
atlas = ExtResource("1_ox8so")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x8bh"]
atlas = ExtResource("1_ox8so")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_knrb0"]
atlas = ExtResource("1_ox8so")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc73a"]
atlas = ExtResource("1_ox8so")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qweh3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wiga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mgon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_474xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6px2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5o1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5myn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p73g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ece5m")
}],
"loop": true,
"name": &"lightning",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ndb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt6jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q3pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he6qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btaq7")
}],
"loop": true,
"name": &"move-down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isly0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f3gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mdx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kkd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60kb4")
}],
"loop": true,
"name": &"move-left",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aniuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8tt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eov42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi0kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7im6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1jx7")
}],
"loop": true,
"name": &"move-up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyqc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x8bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knrb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc73a")
}],
"loop": true,
"name": &"movement",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dyeb4"]
radius = 7.99996
height = 34.6665

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6vij"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebb68"]
bg_color = Color(0.982636, 0.00111382, 0.000611261, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Boss_Soap" type="AnimatedSprite2D" groups=["Boss"]]
texture_filter = 1
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_qweh3")
animation = &"movement"
script = ExtResource("2_02gbn")

[node name="Hitbox" type="Area2D" parent="." groups=["Boss"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-4.65661e-10, 1.33333)
rotation = -1.57411
shape = SubResource("CapsuleShape2D_dyeb4")

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
clip_contents = true
offset_left = -11.2857
offset_top = 13.8095
offset_right = 10.7143
offset_bottom = 16.8095
theme_override_styles/background = SubResource("StyleBoxFlat_c6vij")
theme_override_styles/fill = SubResource("StyleBoxFlat_ebb68")
max_value = 3.0
value = 2.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
